--- a/index.html
+++ b/index.html
@@ -57,24 +57,19 @@ overflow: initial;
 -webkit-font-smoothing: subpixel-antialiased !important;
 }
 .b{
-    font-weight: bold;
-}
-.img{
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    background-position: 50%;
+font-weight: bold;
 }
 .h3{
 margin-bottom: 12px;
 }
 .content{
-    padding: 36px 0 0 0;
+padding: 36px 0 0 0;
 }
 .content > div{
 margin: 0 0 48px 0;
 }
 .content > div:last-of-type{
-    margin: 0;
+margin: 0;
 }
 #posts,
 #intro{
@@ -121,6 +116,11 @@ color: rgba(0, 0, 0, 0.14);
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUNDS */
 /*/////////////////////////////////////////////////////////////*/
+.img{
+background-repeat: no-repeat;
+background-size: 100% auto;
+background-position: 50%;
+}
 body{
 background-color: #FFF;
 }
@@ -323,6 +323,9 @@ background-size: 125% auto;
 .header div div{
    padding: 104px 24px 68px 24px;
    background-size: 100% auto;
+}
+.content > div{
+margin: 0 0 28px 0;
 }
 #intro{
 padding-right: 24px;
