--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ overflow: initial;
 .b{
 font-weight: bold;
 }
-.h3{
-margin-bottom: 16px;
+h3{
+margin-bottom: 12px;
 }
 .content{
 padding: 36px 0 0 0;
@@ -218,7 +218,7 @@ margin-bottom: 0;
 }
 #posts .post > div{
 display: flex;
-padding-bottom 12px;
+padding-bottom: 12px;
 align-items: center;
 flex: 1 0 0;
 }
