--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@ margin: 0 0 12px 0;
 /*/////////////////////////////////////////////////////////////*/
 /* POSTS */
 /*/////////////////////////////////////////////////////////////*/
+#posts{
+width: 100%;
+overflow: hidden;
+}
 #posts .post,
 #posts .post > div{
 gap: 24px;
