--- a/index.html
+++ b/index.html
@@ -203,10 +203,6 @@ margin: 0 0 12px 0;
 /*/////////////////////////////////////////////////////////////*/
 /* POSTS */
 /*/////////////////////////////////////////////////////////////*/
-#posts{
-width: 100%;
-overflow: hidden;
-}
 #posts .post,
 #posts .post > div{
 gap: 24px;
@@ -214,7 +210,7 @@ gap: 24px;
 #posts .post{
 display: flex;
 margin-bottom: 12px;
-align-items: center;
+/*align-items: center;*/
 flex: 1 0 0;
 }
 #posts .post:last-of-type{
@@ -251,6 +247,8 @@ height: 20px;
 /* SLIDER */
 /*/////////////////////////////////////////////////////////////*/
 #sliders{
+width: 100%;
+overflow: hidden;
 display: flex;
 flex-direction: column;
 align-items: flex-start;
