--- a/index.html
+++ b/index.html
@@ -428,13 +428,13 @@ height: 424px!important;
         <div id="sliders">
             <div id="slidedeck">
               <h3>Portfolio Slides</h3>
-                <div class="slider">
-                    <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.png);"></span>
-                    <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide2.png);"></span>
-                    <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide3.png);"></span>
-                    <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide5.png);"></span>
-                    <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide6.png);"></span>
-                </div>
+                <ul class="slider">
+                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.png);"></span></li>
+                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide2.png);"></span></li>
+                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide3.png);"></span></li>
+                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide5.png);"></span></li>
+                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide6.png);"></span></li>
+                </ul>
             </div>
             <!--  ends -->
             <div id="casestudies">
