--- a/index.html
+++ b/index.html
@@ -261,10 +261,12 @@ align-items: flex-start;
 gap: 16px;
 }
 .slider{
+display: flex;
+gap: 12px;
 overflow-x: auto;
 overflow-y: hidden;
-/*-webkit-overflow-scrolling: touch;
-overflow: -moz-scrollbars-horizontal;*/
+-webkit-overflow-scrolling: touch;
+overflow: -moz-scrollbars-horizontal;
 white-space: nowrap;
 }
  .slider .img,
