--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@ border-radius: 16px 0 0 0;
 #posts img{
 border-radius: 8px;
 }
-.slider .img:first-child{
+.slider li:first-child{
 border-radius: 16px 0 0 16px;
 }
-.slider .img:last-child{
+.slider li:last-child{
 border-radius: 0 16px 16px 0;
 }
 @media only screen and (max-width: 424px) {
@@ -261,22 +261,21 @@ align-items: flex-start;
 gap: 16px;
 }
 .slider{
-display: flex;
-gap: 12px;
 overflow-x: auto;
 overflow-y: hidden;
 -webkit-overflow-scrolling: touch;
 overflow: -moz-scrollbars-horizontal;
 white-space: nowrap;
 }
- .slider .img,
-.slider img{
+.slider li{
 width: 398px;
-padding-bottom: 57%;
-/*float: none !important;
-white-space: initial;*/
+margin-right: 12px;
 display: inline-block;
 vertical-align: top;
+}
+ .slider .img,
+.slider img{
+padding-bottom: 57%;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* SHOWCASE */
