--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@ align-items: flex-start;
 gap: 16px;
 }
 .slider{
+width: 100%;
 overflow-x: auto;
 overflow-y: hidden;
 -webkit-overflow-scrolling: touch;
