--- a/index.html
+++ b/index.html
@@ -442,9 +442,9 @@ height: 424px!important;
             <div id="casestudies">
                 <h3>Case Studies</h3>
                 <div class="slider">
-                    <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy1.png);"></span>
-                    <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy2.png);"></span>
-                    <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy3.png);"></span>
+                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy1.png);"></span></li>
+                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy2.png);"></span></li>
+                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy3.png);"></span></li>
                 </div>
             </div>
             <!-- casestudies ends -->
