--- a/index.html
+++ b/index.html
@@ -276,6 +276,8 @@ vertical-align: top;
 }
  .slider .img,
 .slider img{
+display: block;
+width: 100%;
 padding-bottom: 57%;
 }
 /*/////////////////////////////////////////////////////////////*/
