--- a/index.html
+++ b/index.html
@@ -254,11 +254,8 @@ flex-direction: column;
 align-items: flex-start;
 gap: 24px;
 }
-#slider > div{
-display: flex;
-flex-direction: column;
-align-items: flex-start;
-gap: 16px;
+#sliders > div{
+width: 100%;
 }
 .slider{
 width: 100%;
