--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@ width: 100%;
 }
 .slider{
 width: 100%;
-height: 298px;
+height: 228px;
+padding-bottom: 12px;
 overflow-x: auto;
 overflow-y: hidden;
 -webkit-overflow-scrolling: touch;
