--- a/index.html
+++ b/index.html
@@ -366,8 +366,7 @@ padding-right: 8px;
 gap: 8px;
 }
 /*/////////////////////////////////////////////////////////////*/
-.slider .img,
-.slider img{
+.slider li{
 width: 268px!important;
 }
 /*/////////////////////////////////////////////////////////////*/
