--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@ border-radius: 16px 0 0 0;
 #posts img{
 border-radius: 8px;
 }
-.slider li:first-child{
+.slider ul li:first-child{
 border-radius: 16px 0 0 16px;
 }
-.slider li:last-child{
+.slider ul li:last-child{
 border-radius: 0 16px 16px 0;
 }
 @media only screen and (max-width: 424px) {
