--- a/index.html
+++ b/index.html
@@ -154,20 +154,30 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.04), 0px 1px 1px 0px rgba(0, 0, 0, 0
 /*/////////////////////////////////////////////////////////////*/
 #showcase .scrollable{
 border-radius: 16px 0 0 0;
+-webkit-border-radius: 16px 0 0 0;
+  -moz-border-radius: 16px 0 0 0x;
 }
 #posts .img, 
 #posts img{
 border-radius: 8px;
+-webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
 }
 .slider ul li:first-of-type .img{
 border-radius: 16px 0 0 16px;
+-webkit-border-radius: 16px 0 0 16px;
+  -moz-border-radius: 16px 0 0 16px;
 }
 .slider ul li:last-of-type .img{
 border-radius: 0 16px 16px 0;
+-webkit-border-radius: 0 16px 16px 0;
+  -moz-border-radius: 0 16px 16px 0;
 }
 @media only screen and (max-width: 424px) {
     #showcase .scrollable{
 border-radius: 16px 0 0 16px;
+-webkit-border-radius: 16px 0 0 16px;
+  -moz-border-radius: 16px 0 0 16px;
 }
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -223,7 +233,6 @@ align-items: center;
 flex: 1 0 0;
 }
 #posts .post div div{
-min-height: 68px;
 display: flex;
 flex-direction: column;
 align-items: flex-start;
