--- a/index.html
+++ b/index.html
@@ -375,11 +375,15 @@ padding-right: 8px;
 gap: 8px;
 }
 /*/////////////////////////////////////////////////////////////*/
+#sliders{
+gap: 12px;
+}
 .slider li{
 width: 268px!important;
 }
 .slider{
 height: 154px;
+padding-bottom: 4px;
 }
 /*/////////////////////////////////////////////////////////////*/
 #showcase .scrollable{
