--- a/index.html
+++ b/index.html
@@ -375,6 +375,9 @@ gap: 12px;
 padding-right: 8px;
 gap: 8px;
 }
+#posts .post .icn{
+display: none;
+}
 /*/////////////////////////////////////////////////////////////*/
 #sliders{
 gap: 12px;
