--- a/index.html
+++ b/index.html
@@ -192,9 +192,10 @@ flex-direction: column;
 .header h1, .header h2{
 line-height: 110%;
 }
-.header img{
+.header .img{
 width: 312px;
 height: 248px;
+background-size: 100% auto;
 flex-shrink: 0;
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -321,7 +322,7 @@ flex-shrink: 0;
 height: 274px;
 position: relative;
 }
-.header img{
+.header .img{
 position: absolute;
 bottom: 0px;
 left: 12px;
@@ -347,7 +348,7 @@ background-size: 100% auto;
 .header div div{
 align-items: center;
 }
-.header img{
+.header .img{
 margin-bottom: 12px;
 }
 .header > div{
@@ -401,7 +402,7 @@ height: 424px!important;
 <body>
 <div class="header"><div>
     <div>
-        <img src="https://peteroper.github.io/portfolio/assets/imgs/avatar.png" />
+        <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar.jpg);"></span>
         <h1>Peter Roper</h1>
         <h2>Product Designer</h2>
     </div>
