--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ height: 424px!important;
 <body>
 <div class="header"><div>
     <div>
-        <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar.jpg);"></span>
+        <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png);"></span>
         <h1>Peter Roper</h1>
         <h2>Product Designer</h2>
     </div>
