--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@ position: absolute;
 left: 58px;
 top: 20px;
 background-size: 100% auto;
+background-repeat: no-repeat;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
