--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
 <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <meta name="theme-color" content="#346672">
 <style>
 /*/////////////////////////////////////////////////////////////*/
@@ -47,7 +49,7 @@
 /* CORE */
 /*/////////////////////////////////////////////////////////////*/
 *, body{
-font-family: Merriweather;
+font-family: 'Merriweather','Lora';
 padding: 0;
 margin: 0;
 border: 0;
@@ -140,9 +142,6 @@ background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-s
 background-repeat: repeat-x;
 background-position: 0 100%;
 }
-#posts .post > div{
-border-bottom: 1px solid rgba(0, 0, 0, 0.14);
-}
 /*/////////////////////////////////////////////////////////////*/
 /* BOX SHADOWS */
 /*/////////////////////////////////////////////////////////////*/
@@ -229,7 +228,6 @@ margin-bottom: 0;
 }
 #posts .post > div{
 display: flex;
-padding-bottom: 12px;
 align-items: center;
 flex: 1 0 0;
 }
@@ -304,7 +302,7 @@ background-size: 100% auto;
 /*/////////////////////////////////////////////////////////////*/
 #showcase .scrollable{
 width: 100%;
-height: 680px;
+height: 540px;
 flex-shrink: 0;
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -347,6 +345,11 @@ left: 58px;
 top: 20px;
 background-size: 100% auto;
 background-repeat: no-repeat;
+}
+/*/////////////////////////////////////////////////////////////*/
+#posts .post > div{
+padding-bottom: 12px;
+border-bottom: 1px solid rgba(0, 0, 0, 0.14);
 }
 /*/////////////////////////////////////////////////////////////*/
 }
