--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <meta name="theme-color" content="#346672">
-<link rel="apple-touch-icon" href="https://peteroper.github.io/portfolio/assets/imgs/icon-apple.png">
-<meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.png">
+<link rel="apple-touch-icon" href="https://peteroper.github.io/portfolio/assets/imgs/icon-apple.jpg">
+<meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
 <style>
 /*/////////////////////////////////////////////////////////////*/
 /* MATERIAL ICONS */
