--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html> 
 <head>
+<title>Peter Roper Product Designer| Tokyo Japan</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
 <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
