--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ height: 424px!important;
          
         <div id="sliders">
             <div id="slidedeck">
-              <h3>Portfolio Slides</h3>
+              <h3>About Me</h3>
                 <div class="slider">
                 <ul>
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.jpg);"></span></li>
