--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ color: #346672;
 body{
 color: #252D34;
 }
+#contact,
 .header{
  color: #FFF;
 }
@@ -133,6 +134,9 @@ background-color: #FFF;
 #posts .img, 
 #sliders img {
 background-color: #E3E9F0;
+}
+#contact{
+background-color: #3F464C;
 }
 .header{
 background-color: #346672;
@@ -309,6 +313,12 @@ height: 540px;
 flex-shrink: 0;
 }
 /*/////////////////////////////////////////////////////////////*/
+/* SHOWCASE */
+/*/////////////////////////////////////////////////////////////*/
+#contact{
+padding: 68px 0;
+}
+/*/////////////////////////////////////////////////////////////*/
 
 /* RESPONSIVE */
 
@@ -317,6 +327,7 @@ flex-shrink: 0;
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (min-width: 1024px) {
 .content,
+#contact,
 .header div div{
    padding-left: 324px!important;
 }
@@ -468,7 +479,7 @@ height: 424px!important;
                     <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);" ></span>
                     <div class="contents">
                         <div>
-                            <h4>Important of a Component Library</h4>
+                            <h4>Importance of a Component Library</h4>
                             <p>text goes here, max of 2 lines and then elipses?</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
@@ -516,5 +527,10 @@ height: 424px!important;
         <!-- showcase ends -->
 </div>  
 <!-- body end -->
+<div id="contact"><div>
+<a href="https://www.linkedin.com/in/peter-roper" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-linkedin.png;">LinkedIn</a>
+<a href="#" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.png;">LINE</a>
+<a href="mailto:peter.roper.jp@gmail.com" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-email.png;">Email</a>
+</div></div>
 </body>
 </html>
