--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ border-radius: 16px 0 0 16px;
 .header div div{
 position: relative;
 display: flex;
+gap: 4px;
 justify-content: center;
 flex-direction: column;
 }
