--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ h3{
 margin-bottom: 12px;
 }
 .content{
-padding: 36px 0 0 0;
+padding: 36px 0 36px 0;
 }
 .content > div{
 margin: 0 0 48px 0;
@@ -159,9 +159,9 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.04), 0px 1px 1px 0px rgba(0, 0, 0, 0
 /* RADIUS */
 /*/////////////////////////////////////////////////////////////*/
 #showcase .scrollable{
-border-radius: 16px 0 0 0;
--webkit-border-radius: 16px 0 0 0;
-  -moz-border-radius: 16px 0 0 0x;
+border-radius: 16px 0 0 16px;
+-webkit-border-radius: 16px 0 0 16px;
+-moz-border-radius: 16px 0 0 16px;
 }
 #posts .img, 
 #posts img{
@@ -178,13 +178,6 @@ border-radius: 16px 0 0 16px;
 border-radius: 0 16px 16px 0;
 -webkit-border-radius: 0 16px 16px 0;
   -moz-border-radius: 0 16px 16px 0;
-}
-@media only screen and (max-width: 424px) {
-    #showcase .scrollable{
-border-radius: 16px 0 0 16px;
--webkit-border-radius: 16px 0 0 16px;
-  -moz-border-radius: 16px 0 0 16px;
-}
 }
 /*/////////////////////////////////////////////////////////////*/
 /* HEADER */
@@ -390,7 +383,7 @@ background: linear-gradient(0deg, #709097 0%, #406E79 22%, #42707B 68%, rgba(53,
 }
 /*/////////////////////////////////////////////////////////////*/
 .content{
-padding: 24px 0 48px 24px;
+padding: 24px 0 24px 24px;
 }
 .content > div{
 margin: 0 0 28px 0;
