--- a/index.html
+++ b/index.html
@@ -307,10 +307,21 @@ height: 540px;
 flex-shrink: 0;
 }
 /*/////////////////////////////////////////////////////////////*/
-/* SHOWCASE */
+/* CONTACT */
 /*/////////////////////////////////////////////////////////////*/
 #contact{
 padding: 68px 0;
+display: flex;
+gap: 24px;
+}
+#contact a{
+width: 48px;
+height: 48px;
+background-size: 100% auto;
+}
+#contact a:first-of-type{
+width: 96px;
+height: 96px;
 }
 /*/////////////////////////////////////////////////////////////*/
 
@@ -522,9 +533,9 @@ height: 424px!important;
 </div>  
 <!-- body end -->
 <div id="contact"><div>
-<a href="https://www.linkedin.com/in/peter-roper" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-linkedin.png;">LinkedIn</a>
-<a href="#" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.png;">LINE</a>
-<a href="mailto:peter.roper.jp@gmail.com" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-email.png;">Email</a>
+    <a href="#" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.jpg;">LINE</a>
+    <a href="https://www.linkedin.com/in/peter-roper" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-linkedin.png;">LinkedIn</a>
+    <a href="mailto:peter.roper.jp@gmail.com" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-email.png;">Email</a>
 </div></div>
 </body>
 </html>
