--- a/index.html
+++ b/index.html
@@ -318,6 +318,8 @@ gap: 24px;
 width: 48px;
 height: 48px;
 background-size: 100% auto;
+text-indent: -5000px;
+overflow: hidden;
 }
 #contact a:first-of-type{
 width: 96px;
