--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@ background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-s
 background-repeat: repeat-x;
 background-position: 0 100%;
 }
+#contact div{
+background-image: url(https://peteroper.github.io/portfolio/assets/imgs/contact-shape.png);
+background-repeat: repeat-x;
+background-position: 0 0;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* BOX SHADOWS */
 /*/////////////////////////////////////////////////////////////*/
@@ -309,7 +314,7 @@ flex-shrink: 0;
 /*/////////////////////////////////////////////////////////////*/
 /* CONTACT */
 /*/////////////////////////////////////////////////////////////*/
-#contact{
+#contact div{ 
 padding: 68px 0;
 display: flex;
 gap: 24px;
