--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@ gap: 24px;
 #contact a{
 width: 48px;
 height: 48px;
+display: block;
 background-size: 100% auto;
 text-indent: -5000px;
 overflow: hidden;
