--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ height: 96px;
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (min-width: 1024px) {
 .content,
-#contact,
+#contact div,
 .header div div{
    padding-left: 324px!important;
 }
