--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ flex-shrink: 0;
 /* CONTACT */
 /*/////////////////////////////////////////////////////////////*/
 #contact div{ 
-padding: 68px 0;
+padding: 96px 0 68px 0;
 display: flex;
 gap: 24px;
 }
@@ -541,9 +541,9 @@ height: 424px!important;
 </div>  
 <!-- body end -->
 <div id="contact"><div>
-    <a href="#" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.jpg;">LINE</a>
-    <a href="https://www.linkedin.com/in/peter-roper" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-linkedin.png;">LinkedIn</a>
-    <a href="mailto:peter.roper.jp@gmail.com" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-email.png;">Email</a>
+    <a href="#" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.jpg);">LINE</a>
+    <a href="https://www.linkedin.com/in/peter-roper" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-linkedin.png);">LinkedIn</a>
+    <a href="mailto:peter.roper.jp@gmail.com" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-email.png);">Email</a>
 </div></div>
 </body>
 </html>
