--- a/index.html
+++ b/index.html
@@ -541,6 +541,8 @@ height: 424px!important;
 </div>  
 <!-- body end -->
 <div id="contact"><div>
+    <h3>Get in Touch</h3>
+    <p>Thanks stopping by. If you'd like to get intouch, please reach out using one of the following methods:</p>
     <a href="#" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.jpg);">LINE</a>
     <a href="https://www.linkedin.com/in/peter-roper" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-linkedin.png);">LinkedIn</a>
     <a href="mailto:peter.roper.jp@gmail.com" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-email.png);">Email</a>
