--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ background-repeat: no-repeat;
 background-size: 100% auto;
 background-position: 50%;
 }
+#contact .img,
 body{
 background-color: #FFF;
 }
@@ -168,6 +169,7 @@ border-radius: 16px 0 0 16px;
 -webkit-border-radius: 16px 0 0 16px;
 -moz-border-radius: 16px 0 0 16px;
 }
+#contact .img,
 #posts .img, 
 #posts img{
 border-radius: 8px;
