--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@ background-image: url(https://peteroper.github.io/portfolio/assets/imgs/contact-
 background-repeat: repeat-x;
 background-position: 0 0;
 }
+#contact .img{
+border: 8px #FFF solid;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* BOX SHADOWS */
 /*/////////////////////////////////////////////////////////////*/
