--- a/index.html
+++ b/index.html
@@ -319,10 +319,16 @@ flex-shrink: 0;
 /*/////////////////////////////////////////////////////////////*/
 /* CONTACT */
 /*/////////////////////////////////////////////////////////////*/
-#contact div{ 
+#contact > div{ 
 padding: 96px 0 68px 0;
 display: flex;
 gap: 24px;
+}
+#contact div div{
+margin-bottom: 24px;
+display: flex;
+gap: 12px;
+flex-direction: column;
 }
 #contact a{
 width: 48px;
@@ -546,8 +552,10 @@ height: 424px!important;
 </div>  
 <!-- body end -->
 <div id="contact"><div>
+    <div>
     <h3>Get in Touch</h3>
     <p>Thanks stopping by. If you'd like to get intouch, please reach out using one of the following methods:</p>
+    </div>
     <a href="#" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.jpg);">LINE</a>
     <a href="https://www.linkedin.com/in/peter-roper" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-linkedin.png);">LinkedIn</a>
     <a href="mailto:peter.roper.jp@gmail.com" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-email.png);">Email</a>
