--- a/index.html
+++ b/index.html
@@ -452,6 +452,10 @@ padding-bottom: 4px;
 #showcase .scrollable{
 height: 424px!important;
 }
+/*/////////////////////////////////////////////////////////////*/
+#contact > div{
+padding: 48px 24px 36px 24px;
+}
 }
 /*/////////////////////////////////////////////////////////////*/
 </style>
