--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-s
 background-repeat: repeat-x;
 background-position: 0 100%;
 }
-#contact div{
+#contact > div{
 background-image: url(https://peteroper.github.io/portfolio/assets/imgs/contact-shape.png);
 background-repeat: repeat-x;
 background-position: 0 0;
