--- a/index.html
+++ b/index.html
@@ -321,14 +321,16 @@ flex-shrink: 0;
 /*/////////////////////////////////////////////////////////////*/
 #contact > div{ 
 padding: 96px 0 68px 0;
-display: flex;
-gap: 24px;
 }
 #contact div div{
 margin-bottom: 24px;
 display: flex;
 gap: 12px;
 flex-direction: column;
+}
+#contact ul{
+display: flex;
+gap: 24px;
 }
 #contact a{
 width: 48px;
@@ -560,9 +562,11 @@ padding: 48px 24px 36px 24px;
     <h3>Get in Touch</h3>
     <p>Thanks stopping by. If you'd like to get intouch, please reach out using one of the following methods:</p>
     </div>
+    <ul>
     <a href="#" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.jpg);">LINE</a>
     <a href="https://www.linkedin.com/in/peter-roper" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-linkedin.png);">LinkedIn</a>
     <a href="mailto:peter.roper.jp@gmail.com" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-email.png);">Email</a>
+    </ul>
 </div></div>
 </body>
 </html>
