--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ height: 96px;
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (min-width: 1024px) {
 .content,
-#contact div,
+#contact > div,
 .header div div{
    padding-left: 324px!important;
 }
