--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ padding: 76px 24px 36px 24px;
 <div id="contact"><div>
     <div>
     <h3>Get in Touch</h3>
-    <p>Thanks stopping by. If you'd like to get intouch, please reach out using one of the following methods:</p>
+    <p>Thanks for stopping by. If you'd like to get in touch, please reach out using one of the following methods:</p>
     </div>
     <ul>
     <a href="#" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.jpg);">LINE</a>
