--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ font-family: Lora;
 h1{ font-size: 4.8em; letter-spacing: -1.92px; }
 h2{ font-size: 2em; font-weight: normal; letter-spacing: 0.8px;  }
 h3{ font-size: 2.4em; letter-spacing: -1.12px; }
+#contact h3h3{ font-size: 2.8em; }
 h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l{ font-size: 2.2em; line-height: 140%; letter-spacing: -0.48px; }
 p{ font-size: 1.8em; }
@@ -332,16 +333,12 @@ display: flex;
 gap: 24px;
 }
 #contact a{
-width: 48px;
-height: 48px;
+width: 76px;
+height: 76px;
 display: block;
 background-size: 100% auto;
 text-indent: -5000px;
 overflow: hidden;
-}
-#contact a:first-of-type{
-width: 96px;
-height: 96px;
 }
 /*/////////////////////////////////////////////////////////////*/
 
@@ -455,6 +452,7 @@ height: 424px!important;
 }
 /*/////////////////////////////////////////////////////////////*/
 #contact > div{
+align-items: center;
 padding: 76px 24px 36px 24px;
 }
 }
