--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ font-family: Lora;
 h1{ font-size: 4.8em; letter-spacing: -1.92px; }
 h2{ font-size: 2em; font-weight: normal; letter-spacing: 0.8px;  }
 h3{ font-size: 2.4em; letter-spacing: -1.12px; }
-#contact h3h3{ font-size: 2.8em; }
+#contact h3{ font-size: 2.8em; }
 h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l{ font-size: 2.2em; line-height: 140%; letter-spacing: -0.48px; }
 p{ font-size: 1.8em; }
@@ -452,6 +452,7 @@ height: 424px!important;
 }
 /*/////////////////////////////////////////////////////////////*/
 #contact > div{
+text-align: center;
 align-items: center;
 padding: 76px 24px 36px 24px;
 }
