--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ margin: 0 0 48px 0;
 .content > div:last-of-type{
 margin: 0;
 }
+#sliders p,
 #contact > div,
 #posts,
 #intro{
@@ -521,6 +522,7 @@ padding: 96px 24px 36px 24px;
         <div id="sliders">
             <div id="slidedeck">
               <h3>About Me</h3>
+              <p>If you would like a to get to know more about me, please get in touch and I will send over by slide deck as a figma prototype and pdf.</p>
                 <div class="slider">
                 <ul>
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.jpg);"></span></li>
