--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@ gap: 24px;
 #sliders > div{
 width: 100%;
 }
+#sliders p{
+margin-bottom: 16px;
+}
 .slider{
 width: 100%;
 height: 228px;
@@ -522,7 +525,7 @@ padding: 96px 24px 36px 24px;
         <div id="sliders">
             <div id="slidedeck">
               <h3>About Me</h3>
-              <p>If you would like a to know more about me or read through some casestudies please get in touch and I will send over by slide deck as a figma prototype and pdf.</p>
+              <p>If you would like a to know more about me or read through some casestudies please get in touch and I will send over my slide deck as a figma prototype and pdf.</p>
                 <div class="slider">
                 <ul>
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.jpg);"></span></li>
