--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ margin: 0 0 48px 0;
 margin: 0;
 }
 #sliders p,
-#contact > div,
+#contact > div p,
 #posts,
 #intro{
 max-width: 724px;
@@ -463,6 +463,9 @@ height: 424px!important;
 text-align: center;
 align-items: center;
 padding: 96px 24px 36px 24px;
+}
+#contact ul{
+align-items: center;
 }
 }
 /*/////////////////////////////////////////////////////////////*/
