--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@ height: 424px!important;
 }
 /*/////////////////////////////////////////////////////////////*/
 #contact > div{
+background-size: 100% auto;
 text-align: center;
 align-items: center;
 padding: 96px 24px 36px 24px;
