--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@ color: #252D34;
 #posts .icn{
 color: rgba(0, 0, 0, 0.14);
 }
+p{
+opacity: 0.68;
+}
+p.l{
+opacity: 1.0;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUNDS */
 /*/////////////////////////////////////////////////////////////*/
