--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@ color: #252D34;
 color: rgba(0, 0, 0, 0.14);
 }
 p{
-opacity: 0.68;
+opacity: 0.8;
+}
+#posts p{
+opacity: 0.6;
 }
 p.l{
 opacity: 1.0;
