--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ align-items: center;
         <div id="intro">
             <p class="l b">Hi I’m Peter, a Product designer with more than 15 years professional experience.</p>
             <p class="l">I have been creating digital products since the very early days of the internets transition into visual design.</p>
-            <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider. More information on my background in design is covered in my portfolio slideshow</p>
+            <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider.</p>
         </div>
         <!-- intro ends -->
          
@@ -507,7 +507,7 @@ align-items: center;
                     <div class="contents">
                         <div>
                             <h4>Establishing UX Principles</h4>
-                            <p>text goes here, max of 2 lines and then elipses?</p>
+                            <p>text goes here</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
                     </div>   
@@ -518,7 +518,7 @@ align-items: center;
                     <div class="contents">
                         <div>
                             <h4>Automating a Screenflow</h4>
-                            <p>text goes here, max of 2 lines and then elipses?</p>
+                            <p>text goes here</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
                     </div>   
@@ -529,7 +529,7 @@ align-items: center;
                     <div class="contents">
                         <div>
                             <h4>Importance of a Component Library</h4>
-                            <p>text goes here, max of 2 lines and then elipses?</p>
+                            <p>text goes here</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
                     </div>   
@@ -541,7 +541,6 @@ align-items: center;
         <div id="sliders">
             <div id="slidedeck">
               <h3>About Me</h3>
-              <p>If you would like to know more about me or read through some case studies please get in touch and I will send over my slide deck as a figma prototype and pdf.</p>
                 <div class="slider">
                 <ul>
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.jpg);"></span></li>
@@ -580,7 +579,7 @@ align-items: center;
 <div id="contact"><div>
     <div>
     <h3>Get in Touch</h3>
-    <p>Thanks for stopping by. If you'd like to get in touch, please reach out using one of the following methods:</p>
+    <p>Thanks for stopping by. If you would like to know more about me or read through some case studies please get in touch and I will send over my slide deck as a figma prototype and pdf.</p>
     </div>
     <ul>
     <a href="#" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.jpg);">LINE</a>
