--- a/index.html
+++ b/index.html
@@ -368,8 +368,12 @@ overflow: hidden;
    padding-left: 324px!important;
 }
 /*/////////////////////////////////////////////////////////////*/
-.header div div{
+.header{
 height: 274px;
+overflow: hidden;
+}
+.header div div{
+height: 275px;
 position: relative;
 }
 .header .img{
