--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ h3{
 margin-bottom: 12px;
 }
 .content{
-padding: 36px 0 36px 0;
+padding: 36px 0 68px 0;
 }
 .content > div{
 margin: 0 0 48px 0;
@@ -429,7 +429,7 @@ background: linear-gradient(0deg, #709097 0%, #406E79 22%, #42707B 68%, rgba(53,
 }
 /*/////////////////////////////////////////////////////////////*/
 .content{
-padding: 24px 0 24px 24px;
+padding: 24px 0 48px 24px;
 }
 .content > div{
 margin: 0 0 28px 0;
@@ -476,7 +476,7 @@ height: 424px!important;
 background-size: 100% auto;
 text-align: center;
 align-items: center;
-padding: 96px 24px 36px 24px;
+padding: 68px 24px 36px 24px;
 }
 #contact ul{
 align-items: center;
@@ -510,7 +510,7 @@ align-items: center;
                     <div class="contents">
                         <div>
                             <h4>Establishing UX Principles</h4>
-                            <p>text goes here</p>
+                            <p>Is necessary so all heads are pointing in the same direction.</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
                     </div>   
@@ -521,7 +521,7 @@ align-items: center;
                     <div class="contents">
                         <div>
                             <h4>Automating a Screenflow</h4>
-                            <p>text goes here</p>
+                            <p>With a figma screen repository creates a scalable system</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
                     </div>   
@@ -532,7 +532,7 @@ align-items: center;
                     <div class="contents">
                         <div>
                             <h4>Importance of a Component Library</h4>
-                            <p>text goes here</p>
+                            <p>Is crucial in developing a consistent app.</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
                     </div>   
