--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ background-repeat: repeat-x;
 background-position: 0 0;
 }
 #contact .img{
-border: 8px #FFF solid;
+border: 4px #FFF solid;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* BOX SHADOWS */
@@ -480,6 +480,7 @@ padding: 68px 24px 36px 24px;
 }
 #contact ul{
 align-items: center;
+justify-content: center;
 }
 }
 /*/////////////////////////////////////////////////////////////*/
