--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ h2{ font-size: 2em; font-weight: normal; letter-spacing: 0.8px;  }
 h3{ font-size: 2.4em; letter-spacing: -1.12px; }
 #contact h3{ font-size: 3.2em; }
 h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
-p.l, p.l span{ font-size: 2.2em; line-height: 140%; letter-spacing: -0.48px; }
+p.l{ font-size: 2.2em; line-height: 140%; letter-spacing: -0.48px; }
 p{ font-size: 1.8em; }
 .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
 /*/////////////////////////////////////////////////////////////*/
