--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@ h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l{ font-size: 2.2em; line-height: 140%; letter-spacing: -0.48px; }
 p{ font-size: 1.8em; }
 .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
+p.l span{
+font-size: 1em;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
 /*/////////////////////////////////////////////////////////////*/
