--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ justify-content: center;
          
         <div id="sliders">
             <div id="slidedeck">
-              <h3>About Me</h3>
+              <h3>About Me <a href="https://www.figma.com/proto/Tinw42b8dPcKnoTytk0bi2/Peter-Roper-Slide-Deck?page-id=43%3A36773&type=design&node-id=43-37238&viewport=1135%2C459%2C0.25&scaling=contain&starting-point-node-id=43%3A37238&mode=design">Figma Preview</a></h3>
                 <div class="slider">
                 <ul>
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.jpg);"></span></li>
@@ -555,14 +555,6 @@ justify-content: center;
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide3.jpg);"></span></li>
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide5.jpg);"></span></li>
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide6.jpg);"></span></li>
-                </ul>
-                </div>
-            </div>
-            <!--  ends -->
-            <div id="casestudies">
-                <h3>Case Studies</h3>
-                <div class="slider">
-                <ul>
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy1.jpg);"></span></li>
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy2.jpg);"></span></li>
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy3.jpg);"></span></li>
