--- a/index.html
+++ b/index.html
@@ -109,9 +109,18 @@ p{ font-size: 1.8em; }
 p.l span{
 font-size: 1em;
 }
+h3 a{
+font-size: 1rem;
+font-weight: normal;
+text-decoration: none;
+}
+h3 a:hover{
+text-decoration: underline;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
 /*/////////////////////////////////////////////////////////////*/
+h3 a,
 #posts h4, #posts h4 a{
 color: #346672;
 }
@@ -578,7 +587,7 @@ justify-content: center;
 <div id="contact"><div>
     <div>
     <h3>Get in Touch</h3>
-    <p>Thanks for stopping by. If you would like to know more about me or read through some case studies please get in touch and I will send over my slide deck as a figma prototype and pdf.</p>
+    <p>Thanks for stopping by. If you would like to know more about me or read through some case studies please get in touch and I will send over my full slide deck as a figma prototype and pdf.</p>
     </div>
     <ul>
     <a href="#" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.jpg);">LINE</a>
