--- a/index.html
+++ b/index.html
@@ -343,6 +343,16 @@ width: 100%;
 height: 540px;
 flex-shrink: 0;
 }
+#showcase .scrollable > div{
+display: flex;
+}
+#showcase span{
+height: 100%;
+background-size: auto 100%;
+}
+.showcase1 span{
+padding-left: 150%;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* CONTACT */
 /*/////////////////////////////////////////////////////////////*/
@@ -578,7 +588,9 @@ justify-content: center;
         <div id="showcase" >
                 <h3>Showcase</h3>
                 <div class="scrollable">
-
+                    <div class="showcase1">
+                    <span style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg);"></span>
+                    </div>
                 </div>
         </div>
         <!-- showcase ends -->
