--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@ p.l span{
 font-size: 1em;
 }
 h3 a{
-font-size: 1rem;
+font-size: 0.68em;
+padding-left: 12px;
+display: inline-block;
 font-weight: normal;
 text-decoration: none;
 }
