--- a/index.html
+++ b/index.html
@@ -349,10 +349,20 @@ background-size: 100% auto;
 width: 100%;
 height: 540px;
 flex-shrink: 0;
+overflow-x: auto;
+overflow-y: hidden;
+-webkit-overflow-scrolling: touch;
+overflow: -moz-scrollbars-horizontal;
+white-space: nowrap;
+position: relative;
 }
 #showcase .scrollable > div{
 height: 100%;
 display: flex;
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
 }
 #showcase span{
 height: 100%;
